Minor cleanup to address loose ends identified by FindBugs.